# mercadona-scrapper-streamlit

./: app.py  pyproject.toml
